--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,11 @@ body {
   font-weight: 600;
 }
 
+.title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .background-img {
     position: relative;
     width: 100%;
