customhits with c analytics

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -103,4 +103,15 @@ body {
     margin-top: 15px;
   }
   
+  .ais-Hits-item {
+    padding: 0px;
+  }
+
+  .ais-Hits-list {
+
+  }
+
+  .ais-Hits {
+    
+  }
   
