--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,17 +7,12 @@ body {
   font-weight: 600;
 }
 
-.title {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
 .background-img {
-    position: relative;
-    width: 100%;
-    background: url("../img/bg-pattern.png"), rgb(0, 173, 255);
-    background: url("../img/bg-pattern.png"), linear-gradient(to left, #2590ba, #a717b8);
-  }
+  position: relative;
+  width: 100%;
+  background: url("../img/bg-pattern.png"), rgb(145, 214, 248);
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #78d1f3, #f4e1f8);
+}
   
   @media (min-width: 992px) {
     header.background-img {
@@ -37,70 +32,176 @@ body {
       max-width: 325px;
     }
   }
-  
-  #main {
-      padding-bottom: 25px;
-  }
-  
-  #facet {
-      margin-bottom: 10px;
-  }
 
-  #facetList {
-    margin-right: 15px;
-    margin-left: -10px;
-    margin-top: -10px;
-  }
-  
-  footer {
-      padding: 10px;
-      text-align: center;
-      color: rgba(255, 255, 255, 0.3);
-      background-color: #222222;
-  }
-  
-  #searchRowImg {
-      margin-bottom: 10px;
+// Header
+#logoImg {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+#algoliaIcon {
+  padding-top: 3px;
+  padding-left: 60px;
+}
+
+#title {
+  margin-top: 40px;
+  padding-left: 10px;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+// Search Row
+#searchRow {
+  margin: 15px;
+}
+
+#searchRow div {
+  border-radius: 8px;
+}
+
+#searchRow input {
+  width: 100%;
+  height: 60px;
+  transition: all 0.35s ease-in-out; 
+}
+
+#searchRow input:hover {
+  transition: all 0.5s ease-in;
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.19), 0 6px 12px rgba(0,0,0,0.23);
+}
+
+#biMap {
+  font-size: 50px;
+  margin-top: 6px;
+  margin-left: -18px;
+  color: #222222;
+}
+
+#biMap:hover {
+  animation: glowing 1500ms infinite;
+}
+  @keyframes glowing {
+    0% {
+      color: #292929;
+      font-size: 55px;
       
-  }
-
-  // .searchBox {
-  //   // width: 100%;
-  //   // margin-bottom: 10px;
-  //   // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  // }
-
-  .ais-SearchBox.searchBox {
-    width: 100%;
-    box-shadow: 0 10px 20px rgba(255, 255, 255, 0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
-  
-  .ais-SearchBox.facetSearch {
-    width: 100%;
-    padding: 1px;
-  }
-  
-  #hit {
-      margin: 5px;
-      margin-bottom: 15px;
-      padding: 5px;
+    }
+    50% {
+      color: #5f5f5f;
+      font-size: 70px;
+    }
+    100% {
+      color: #292929;
+      font-size: 55px;
       
-  }
-  #hit:hover {
-      box-shadow: 0 14px 28px rgba(255, 255, 255, 0.19), 0 10px 10px rgba(255,255,255,0.22);
-  }
-  
-  .hover-hit {
-      color: blue;
-  }
-  
-  .fa.fa-star.full::after {
-      color: blue;
-      text-shadow: 0 0 1px #000
+    }
   }
 
-  #fullMapView {
-    margin-top: 15px;
-  }
+// Main Body
+#main {
+    padding-bottom: 25px;
+}
 
+#facet {
+    margin-bottom: 10px;
+}
+
+#facetList {
+  margin-right: 15px;
+  margin-left: -10px;
+  margin-top: -10px;
+}
+
+.ais-SearchBox.searchBox {
+  width: 100%;
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.ais-SearchBox.facetSearch {
+  width: 100%;
+  padding: 1px;
+}
+
+#hitDiv {
+  margin-bottom: 15px;
+}
+
+#hitInfo {
+  width:100%;
+  height: 100%;
+}
+
+
+#hit {
+    margin: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    
+}
+#hit:hover {
+    box-shadow: 0 14px 28px rgba(255, 255, 255, 0.19), 0 10px 10px rgba(255,255,255,0.22);
+}
+
+.hover-hit {
+    color: blue;
+}
+
+// Hit Modal
+#mapIconModal {
+  font-size: 35px;
+  padding-top: 50px;
+}
+
+#mapIconModal svg {
+  height: 1.4em;
+  width: 1.4em;
+  padding-right: 10px;
+  fill: rgb(42, 0, 121);
+}
+
+.fa.fa-star.full::after {
+    color: blue;
+    text-shadow: 0 0 1px #000
+}
+
+#fullMapView {
+  margin-top: 15px;
+}
+
+.attribute-icon {
+  display: inline-block;
+  padding: 2px;
+}
+
+// Footer
+footer {
+  padding: 10px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #222222;
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 360px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
+    #searchRow div {
+      border-radius: 8px;
+      margin-left: -10px;
+    }
+    #biMap {
+      font-size: 50px;
+      margin-top: 3px;
+      color: #222222;
+      margin-left: -25px;
+    }
+}
   
