--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -40,13 +40,8 @@ body {
 }
 
 #algoliaIcon {
-  padding-top: 3px;
-  padding-left: 60px;
-}
-
-#title {
-  margin-top: 40px;
-  padding-left: 10px;
+  margin-top: -140px;
+  margin-left: 20px;
 }
 
 .title {
